# diffy

./: .gitignore  AGENTS.md  README.md  buf.gen.yaml  buf.yaml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.zed/: settings.json
apps/backend/: Cargo.toml  build.rs  package.json
apps/backend/src/: main.rs
apps/proto-watch/: package.json  tsconfig.json  watch.ts
apps/web/: components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: router.tsx  tanstack-theme-kit.d.ts
apps/web/src/_generated/diffy/v1/: diffy-DemoService_connectquery.ts  diffy_pb.ts
apps/web/src/components/: logo.tsx
apps/web/src/routes/: __root.tsx  index.tsx  test.tsx
