[package]
name = "diffy-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
buffa = { version = "0.6", features = ["json"] }
buffa-types = { version = "0.6", features = ["json"] }
connectrpc = { version = "0.6", features = ["axum"] }
http-body = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
connectrpc-build = "0.6"
protoc-bin-vendored = "3"
